--- a/xml-provider/templates/Personnes.xml
+++ b/xml-provider/templates/Personnes.xml
@@ -46,4 +46,48 @@
 <Approuveur>b.meyers</Approuveur>
 <Changement>I</Changement>
 </Personne>
+<Personne>
+<NoInterne>111111</NoInterne>
+<Nom>Feiereisen</Nom>
+<NomJeuneFille>Meyers</NomJeuneFille>
+<Prenom>Fred</Prenom>
+<Sexe>M</Sexe>
+<DteEntreeRelation>2012-09-12</DteEntreeRelation>
+<DteClotureRelation>2013-01-31</DteClotureRelation>
+<CycleVie>AC</CycleVie>
+<TypePieceIdentite>LU131234</TypePieceIdentite>
+<NoPieceIdentite>LU131234</NoPieceIdentite>
+<CopiePieceIdentite>1</CopiePieceIdentite>
+<dteNaissance>1968-07-12</dteNaissance>
+<LieuNaissance>Luxembourg</LieuNaissance>
+<Nationalite>LU</Nationalite>
+<Nationalite2>PT</Nationalite2>
+<Residence>LU</Residence>
+<PaysNaissance>LU</PaysNaissance>
+<dteExpirationIdentite>2014-08-10</dteExpirationIdentite>
+<Telephone>25 25 25</Telephone>
+<Gsm>621 25 25 25</Gsm>
+<TypeAdresse>HO</TypeAdresse>
+<Adresse>195, route de Longwy
+1390-Luxembourgs</Adresse>
+<Email>feiereisen@compagny.lu</Email>
+<EtatCivil>MA</EtatCivil>
+<dteEntreeRelation>2010-11-03</dteEntreeRelation>
+<ActivitePrincipale>Investisseur professionnel</ActivitePrincipale>
+<Fortune>500 mio €</Fortune>
+<OrigineFortune>n/a</OrigineFortune>
+<PrctInvestissement>30</PrctInvestissement>
+<PrctImmobilier>60</PrctImmobilier>
+<PrctArt>10</PrctArt>
+<Revenus>1250000</Revenus>
+<Depenses>900100</Depenses>
+<NoOrigineFortune>1</NoOrigineFortune>
+<KycBackground>Lorem Ipsum is simply dummy text of the dummmieeeeessssss.
+</KycBackground>
+<News>0</News>
+<IsNewPersonne>0</IsNewPersonne>
+<Responsable>a.lessure</Responsable>
+<Approuveur>b.meyers</Approuveur>
+<Changement>I</Changement>
+</Personne>
 </Personnes>
